# loss-model

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
src/loss_model/: __init__.py
src/loss_model/data/: data_generation.ipynb  paid_loss.parquet  paid_loss_source.parquet  premium.parquet  rpt_loss.parquet  rpt_loss_source.parquet
src/loss_model/models/: base.py  cross_classified.py  opts.py  samplers.py
src/loss_model/scripts/: fit_crc.py  get_data.py
stan/: crc  crc.stan  crc_functional.stan  get_stan_lib
stan/src/: calculate_mu.cpp  calculate_mu.hpp
stan/test/: test_calculate_mu.cpp
stan/test_build/: run_tests
