[project]
name = "loss-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "ruff>=0.4.8",
    "ruff-lsp>=0.0.53",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "pyarrow>=16.1.0",
    "polars>=0.20.31",
    "cmdstanpy>=1.2.3",
    "xarray>=2024.5.0",
    "ipywidgets>=8.1.3",
    "duckdb>=1.0.0",
    "matplotlib>=3.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loss_model"]
